Update DICOM Tools and Conformance, remove unused dependencies